# ButterflyMX-444

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
butterflymx_444/: app.py  credential_cache.py  security.py  settings.py  utils.py
butterflymx_444/models/: user.py
butterflymx_444/scripts/: __init__.py  create_user.py
butterflymx_444/templates/: base.html.jinja  incorrect_credentials.html.jinja  index.html.jinja  login.html.jinja
